[gd_scene load_steps=6 format=3 uid="uid://m2rgyrbs134s"]

[ext_resource type="Script" uid="uid://dv40egmhhdlkx" path="res://Scripts/user_interface.gd" id="1_v7dfl"]
[ext_resource type="Script" uid="uid://17wjwt32twtu" path="res://Scripts/pause_menu.gd" id="2_4d574"]
[ext_resource type="PackedScene" uid="uid://da25or04alwqn" path="res://Scenes/settings_menu.tscn" id="3_4d574"]
[ext_resource type="Texture2D" uid="uid://7ybtdefigwmf" path="res://Assets/Images/Heart.png" id="3_uf5wx"]

[sub_resource type="Theme" id="Theme_7jfck"]
default_font_size = 22

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_7jfck")
script = ExtResource("1_v7dfl")
time_left = 180

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 59.0

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 153.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 10.0
offset_right = 351.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Wave: 0"
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 10.0
offset_right = 567.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Time: 0"
vertical_alignment = 1

[node name="PauseMenu" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 1041.0
offset_top = 9.0
offset_right = 1137.0
offset_bottom = 48.0
text = "Menu"
script = ExtResource("2_4d574")

[node name="PauseWindow" type="ColorRect" parent="PauseMenu"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -10.844
anchor_top = 1.282
anchor_right = 1.146
anchor_bottom = 16.461
offset_left = 0.0240479
offset_top = 0.0019989
offset_right = -0.0160065
offset_bottom = 0.0209961
color = Color(0, 0, 0, 0.294118)

[node name="Resume" type="Button" parent="PauseMenu/PauseWindow"]
layout_mode = 0
offset_left = 144.0
offset_top = 151.0
offset_right = 365.0
offset_bottom = 191.0
text = "Resume
"

[node name="NewGame" type="Button" parent="PauseMenu/PauseWindow"]
layout_mode = 0
offset_left = 144.0
offset_top = 217.0
offset_right = 365.0
offset_bottom = 257.0
text = "New Game"

[node name="Settings" type="Button" parent="PauseMenu/PauseWindow"]
layout_mode = 0
offset_left = 144.0
offset_top = 286.0
offset_right = 365.0
offset_bottom = 326.0
tooltip_text = "You're a setting"
text = "Settings
"

[node name="ReturnToMainMenu" type="Button" parent="PauseMenu/PauseWindow"]
layout_mode = 0
offset_left = 144.0
offset_top = 353.0
offset_right = 365.0
offset_bottom = 393.0
text = "Main Menu"

[node name="Exit" type="Button" parent="PauseMenu/PauseWindow"]
layout_mode = 0
offset_left = 144.0
offset_top = 417.0
offset_right = 365.0
offset_bottom = 457.0
text = "Exit
"

[node name="SettingsMenu" parent="PauseMenu" instance=ExtResource("3_4d574")]
offset_left = -520.0
offset_top = 251.0
offset_right = -203.0
offset_bottom = 427.0

[node name="Health" type="Control" parent="."]
anchors_preset = 0
offset_left = 687.0
offset_top = 6.0
offset_right = 931.0
offset_bottom = 52.0

[node name="Heart" type="TextureRect" parent="Health"]
layout_mode = 2
offset_left = 3.0
offset_top = 6.0
offset_right = 43.0
offset_bottom = 46.0
texture = ExtResource("3_uf5wx")

[node name="Heart2" type="TextureRect" parent="Health"]
layout_mode = 2
offset_left = 46.0
offset_top = 6.0
offset_right = 86.0
offset_bottom = 46.0
texture = ExtResource("3_uf5wx")

[node name="Heart3" type="TextureRect" parent="Health"]
layout_mode = 2
offset_left = 92.0
offset_top = 6.0
offset_right = 132.0
offset_bottom = 46.0
texture = ExtResource("3_uf5wx")

[node name="Heart4" type="TextureRect" parent="Health"]
layout_mode = 2
offset_left = 135.0
offset_top = 6.0
offset_right = 175.0
offset_bottom = 46.0
texture = ExtResource("3_uf5wx")

[node name="Heart5" type="TextureRect" parent="Health"]
layout_mode = 2
offset_left = 180.0
offset_top = 6.0
offset_right = 220.0
offset_bottom = 46.0
texture = ExtResource("3_uf5wx")

[node name="GameTimer" type="Timer" parent="."]
autostart = true
